Added missing unit and integration tests, added consul registration, adjusted api-definition.
